Fixed Mobile Layout Bugs

--- a/Frontend/src/cookies/CookieConsent.css
+++ b/Frontend/src/cookies/CookieConsent.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   padding: 1em;
+  box-sizing: border-box;
 }
 
 .cookie-banner{
@@ -75,7 +76,7 @@
 
 .toggle{
   display: flex;
-  height: 3rem;
+  height: fit-content;
   width: 100%;
   justify-content: space-between;
   gap: 3rem;
